--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
